corrected the alignment of the temperature symbol

--- a/src/TemperatureConversion.css
+++ b/src/TemperatureConversion.css
@@ -1,9 +1,9 @@
 .TemperatureConversion {
   padding-bottom: 20px;
+  display: flex;
 }
 .temperature-today {
   font-size: 60px;
-  display: inline-block;
   line-height: 60px;
 }
 .temperature-unit {
@@ -25,6 +25,7 @@ a:hover:visited {
 }
 @media (max-width: 576px) {
   .TemperatureConversion {
-    text-align: center;
-  }
+    display:flex;
+    justify-content: center;
+}
 }
