--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -4,6 +4,7 @@
   border-radius: 10pt;
   font-size: var(--font-size);
   text-align: center;
+  display: inline-block;
 }
 .WeatherForecast-min {
   opacity: 0.7;
